Directory names cut off at the knees. Paths fixed.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -25,7 +25,7 @@
 }
 body {
 	background: #000;
-	background-image: url('evenBG.gif');
+	background-image: url('/images/evenBG.gif');
 	color: #FFF;
 	font-size: 14px;
 	font-family: "Courier",fixed,monospace;
